--- a/client/src/app/modules/core/footer/footer.component.html
+++ b/client/src/app/modules/core/footer/footer.component.html
@@ -2,15 +2,15 @@
     <div class="container">
         <div class="footer-top pt-100 pb-70">
             <div class="row">
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-5 col-sm-6">
                     <div class="footer-widget">
                         <div class="footer-logo">
                             <a routerLink="" (click)="scrollTop()">
-                                <!-- <img src="assets/images/footer-logo.png" alt="Images"> -->
-                                <h3>Balance Dyte</h3>
+                                <img src="assets/images/logo/balancedyte-logo.png" width="120" alt="Images">
+                                <!-- <h3>Balance Dyte</h3> -->
                             </a>
                         </div>
-                        <p>
+                        <p style="max-width: 400px;">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna
                             aliqua quis ipsum suspendisse.
@@ -39,39 +39,39 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-2 col-sm-6">
+                <div class="col-lg-3 col-sm-6">
                     <div class="footer-widget ps-5">
                         <h3>Useful Links</h3>
                         <ul class="footer-list">
                             <li>
-                                <a routerLink="" (click)="scrollTop()" target="_blank">
+                                <a routerLink="/" (click)="scrollTop()">
                                     Home
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="about" (click)="scrollTop()" target="_blank">
+                                <a routerLink="/about" (click)="scrollTop()">
                                     About Us
                                 </a>
                             </li>
                             <li>
-                                <a  target="_blank">
-                                    Portfolio
+                                <a routerLink="/diet-plans" >
+                                    Diet Plans
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="privacy-policy" (click)="scrollTop()" target="_blank">
+                                <a routerLink="/privacy-policy" (click)="scrollTop()">
                                     Privacy Policy
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="terms-condition" (click)="scrollTop()" target="_blank">
+                                <a routerLink="/terms-condition" (click)="scrollTop()">
                                     Terms & Condition
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-sm-6">
+                <div class="col-lg-4 col-sm-6">
                     <div class="footer-widget ps-5">
                         <h3>Information</h3>
                         <ul class="footer-contact">
@@ -98,7 +98,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6">
+                <!-- <div class="col-lg-4 col-sm-6">
                     <div class="footer-widget ps-5">
                         <h3>Newsletter</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
@@ -113,7 +113,7 @@
                             </form>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
