--- a/client/src/app/modules/core/header/header.component.html
+++ b/client/src/app/modules/core/header/header.component.html
@@ -339,10 +339,10 @@
                 </nav></div>
                 <div class="logo">
                     <a routerLink="" (click)="scrollTop()">
-                        <h6 class="logo-one">Balance Dyte</h6>
-                        <h6 class="logo-two">Balance Dyte</h6>
-                        <!-- <img src="assets/images/logo.png" class="logo-one" alt="Logo">
-                        <img src="assets/images/logo-white.png" class="logo-two" alt="Logo"> -->
+                        <!-- <h6 class="logo-one">Balance Dyte</h6>
+                        <h6 class="logo-two">Balance Dyte</h6> -->
+                        <img src="assets/images/logo/balancedyte-logo.png" width="60" class="logo-one" alt="Logo">
+                        <img src="assets/images/logo/balancedyte-logo.png" width="60" class="logo-two" alt="Logo">
                     </a>
                 </div>
             </div>
@@ -353,10 +353,10 @@
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light ">
                 <a class="navbar-brand" routerLink="" (click)="scrollTop()">
-                    <h2 class="logo-one">Balance Dyte</h2>
-                        <h2 class="logo-two">Balance Dyte</h2>
-                    <!-- <img src="assets/images/logo.png" class="logo-one" alt="Logo">
-                    <img src="assets/images/logo-white.png" class="logo-two" alt="Logo"> -->
+                    <!-- <h2 class="logo-one">Balance Dyte</h2>
+                        <h2 class="logo-two">Balance Dyte</h2> -->
+                    <img src="assets/images/logo/balancedyte-logo.png" width="100" class="logo-one" alt="Logo">
+                    <img src="assets/images/logo/balancedyte-logo.png" width="100" class="logo-two" alt="Logo">
                 </a>
                 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto">
@@ -381,17 +381,12 @@
                                     <a class="nav-link" routerLink="/account/profile" (click)="scrollTop()">Profile</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" routerLink="/account/profile/my-orders" (click)="scrollTop()">My Orders</a>
+                                    <a class="nav-link" routerLink="/account/profile/orders" (click)="scrollTop()">My Orders</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link">Checkout</a>
+                                    <a class="nav-link" routerLink="/account/settings/change-password">Change Password</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link">Wishlist</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link">Shop Details</a>
-                                </li>
+                                
                                 <li class="nav-item" (click)="onLogOut()">
                                     <a class="nav-link">Logout</a>
                                 </li>
