--- a/client/src/app/modules/account-and-settings/components/settings/change-password/change-password.component.html
+++ b/client/src/app/modules/account-and-settings/components/settings/change-password/change-password.component.html
@@ -1,1 +1,89 @@
-<p>change-password works!</p>
+<!-- <div class="inner-banner inner-bg7">
+    <div class="container">
+        <div class="inner-title text-center">
+            <h3>Log In</h3>
+            <ul>
+                <li>
+                    <a routerLink="/" (click)="scrollTop()">Home</a>
+                </li>
+                <li>Log In</li>
+            </ul>
+        </div>
+    </div>
+</div> -->
+
+
+<div class="user-area pt-100 pb-70">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-12">
+                <div class="user-all-form">
+                    <div class="contact-form">
+                        <h3>Change Password</h3>
+                        <form [formGroup]="changePasswordForm" (ngSubmit)="submitForm()" id="contactForm">
+                            <div class="row">
+                                <div class="col-lg-12 ">
+                                    <div class="form-group">
+                                        <input type="password" formControlName="oldPassword" 
+                                            id="name"
+                                            class="form-control"
+                                            placeholder="Old Password">
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 ">
+                                    <div class="form-group">
+                                        <input type="password" formControlName="newPassword" 
+                                            id="name"
+                                            class="form-control"
+                                            placeholder="New Password">
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <input class="form-control"
+                                            type="password"
+                                            formControlName="confirmNewPassword" 
+                                            placeholder="Confirm New Password">
+                                    </div>
+                                </div>
+                                <!-- <div class="col-12 error-div-outer" *ngIf="serverErrorMessages">
+                                    <div class="form-group">
+                                        <div class="error-div-inner">
+                                            {{serverErrorMessages}}</div>
+                                    </div>
+                                </div> -->
+                                
+                                <div class="col-lg-12 form-condition">
+                                    <div class="agree-label">
+                                        <!-- <input type="checkbox"
+                                            id="chb1">
+                                        <label for="chb1">
+                                            Remember Me <a
+                                                class="forget"
+                                                routerLink="/user/reset-password" (click)="scrollTop()">Forgot
+                                                My Password?</a>
+                                        </label> -->
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 col-md-12
+                                    text-center">
+                                    <button type="submit" [disabled]="isLoading"
+                                        class="default-btn">
+                                        {{ !isLoading ? 'Change Password' : 'Changing...'}}
+                                    </button>
+                                </div>
+                                <!-- <div class="col-12">
+                                    <p class="account-desc text-center">
+                                        Not a member?
+                                        <a routerLink="/user/sign-up">Register</a>
+                                    </p>
+                                </div> -->
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<app-spinner *ngIf="isLoading"></app-spinner>
