--- a/client/src/app/modules/register/components/reset-password/response-reset/response-reset.component.html
+++ b/client/src/app/modules/register/components/reset-password/response-reset/response-reset.component.html
@@ -1,1 +1,128 @@
-<p>response-reset works!</p>
+ <!-- <div class="inner-banner inner-bg7">
+    <div class="container">
+        <div class="inner-title text-center">
+            <h3>Log In</h3>
+            <ul>
+                <li>
+                    <a routerLink="/" (click)="scrollTop()">Home</a>
+                </li>
+                <li>Log In</li>
+            </ul>
+        </div>
+    </div>
+</div> -->
+<div class="user-area pt-100 pb-70" *ngIf="CurrentState=='Wait' || CurrentState=='NotVerified'">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-12">
+                <div class="row" *ngIf="CurrentState=='Wait'">
+                    <div class="col-md-12 close-form">
+                        <h2> Please Wait...</h2>
+                    </div>
+                </div>
+                <div class="row"
+                    *ngIf="CurrentState=='NotVerified'">
+                    <div class="col-md-12">
+                        <h2> Invalid URL.</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="user-area pt-100 pb-70" *ngIf="CurrentState=='Verified'">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-12">
+                <div class="user-all-form">
+                    <div class="contact-form">
+                        <h3>Set New Password</h3>
+                        <form [formGroup]="ResponseResetForm"
+                            (ngSubmit)="ResetPassword(ResponseResetForm)"
+                            id="contactForm">
+                            <div class="row">
+                                <div class="col-lg-12 ">
+                                    <div class="form-group">
+                                        <input type="password"
+                                            formControlName="newPassword"
+                                            id="name"
+                                            class="form-control"
+                                            placeholder="New Password">
+                                            <div class="col-12 error-div-outer" *ngIf="!ResponseResetForm.controls['newPassword'].valid
+                                            && !IsResetFormValid">
+                                                <div class="form-group">
+                                                    <div class="error-div-inner">
+                                                        Password is
+                                            required with atleast 4 characters.</div>
+                                                </div>
+                                            </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <input class="form-control"
+                                            type="password"
+                                            formControlName="confirmPassword"
+                                            placeholder="Confirm New Password">
+                                            <div class="col-12 error-div-outer" *ngIf="!ResponseResetForm.controls['confirmPassword'].valid
+                                            && !IsResetFormValid">
+                                                <div class="form-group">
+                                                    <div class="error-div-inner">
+                                                        Form not valid</div>
+                                                </div>
+                                            </div>
+                                            <div class="col-12 error-div-outer" *ngIf="ResponseResetForm.controls['confirmPassword'].valid
+                                            &&
+                                            (ResponseResetForm.controls['confirmPassword'].value
+                                            !=
+                                            ResponseResetForm.controls['newPassword'].value)
+                                            && !IsResetFormValid">
+                                                <div class="form-group">
+                                                    <div class="error-div-inner">
+                                                        Confirm Password
+                                            does not match with password.</div>
+                                                </div>
+                                            </div>
+                                    </div>
+                                </div>
+                                <!-- <div class="col-12 error-div-outer" *ngIf="serverErrorMessages">
+                                    <div class="form-group">
+                                        <div class="error-div-inner">
+                                            {{serverErrorMessages}}</div>
+                                    </div>
+                                </div> -->
+                                <div class="col-lg-12 form-condition">
+                                    <div class="agree-label">
+                                    </div>
+                                </div>
+                                <div class="col-12 success-div-outer" *ngIf="successMessage">
+                                    <div class="form-group">
+                                        <div class="success-div-inner">
+                                            {{successMessage}}</div>
+                                    </div>
+                                </div>
+                                
+                                <div class="col-12 error-div-outer" *ngIf="errorMessage">
+                                    <div class="form-group">
+                                        <div class="error-div-inner">
+                                            {{errorMessage}}</div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 col-md-12
+                                    text-center">
+                                    <button type="submit" [disabled]="isLoading"
+                                        class="default-btn">
+                                        {{ !isLoading ? 'Update Password' :
+                                        'Updating...'}}
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<app-spinner *ngIf="isLoading"></app-spinner>
