--- a/client/src/app/modules/root-common/components/diet-plans/diet-plans.component.html
+++ b/client/src/app/modules/root-common/components/diet-plans/diet-plans.component.html
@@ -1,4 +1,4 @@
-<div class="inner-banner inner-bg12">
+<!-- <div class="inner-banner inner-bg12">
     <div class="container">
         <div class="inner-title text-center">
             <h3>Pricing Plan</h3>
@@ -10,7 +10,7 @@
             </ul>
         </div>
     </div>
-</div>
+</div> -->
 
 <app-pricing-plan [pricingPlanData]="pricingPlanData"></app-pricing-plan>
 
