--- a/client/src/app/modules/register/components/reset-password/response-reset/response-reset.component.html
+++ b/client/src/app/modules/register/components/reset-password/response-reset/response-reset.component.html
@@ -113,8 +113,7 @@
                                     text-center">
                                     <button type="submit" [disabled]="isLoading"
                                         class="default-btn">
-                                        {{ !isLoading ? 'Update Password' :
-                                        'Updating...'}}
+                                        {{ !isLoading ? 'Update Password' : 'Updating...'}}
                                     </button>
                                 </div>
                             </div>
