--- a/client/src/app/modules/register/components/user-sign-up/user-sign-up.component.html
+++ b/client/src/app/modules/register/components/user-sign-up/user-sign-up.component.html
@@ -20,47 +20,149 @@
                 <div class="user-all-form">
                     <div class="contact-form">
                         <h3>Create an Account!</h3>
-                        <form id="contactForm">
+                        <form id="contactForm" [formGroup]="userForm"
+                            (ngSubmit)="submitForm()">
                             <div class="row">
                                 <div class="col-lg-12 ">
-                                    <div class="form-group">
-                                        <input type="text" name="name"
+                                    <div class="form-group"
+                                        [ngClass]="(f['fullName'].invalid &&
+                                        ((f['fullName'].dirty ||
+                                        f['fullName'].touched))) ||
+                                        (f['fullName'].hasError('required') &&
+                                        submitted)?'has-error':''">
+                                        <label>Full Name <span class="required">*</span></label>
+                                        <input type="text"
+                                            formControlName="fullName"
                                             id="name"
                                             class="form-control"
-                                            required data-error="Please
-                                            enter your Username"
-                                            placeholder="Username">
+                                            placeholder="Fullname">
+                                        <div class="error-msg"
+                                            *ngIf="(f['fullName'].hasError('required')
+                                            && f['fullName'].touched) ||
+                                            (f['fullName'].hasError('required')
+                                            &&
+                                            submitted)">
+                                            <i aria-hidden="true" class="fa
+                                                fa-exclamation-triangle"></i>
+                                            Please
+                                            enter your full name.
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 ">
-                                    <div class="form-group">
-                                        <input type="email" name="name"
+                                    <div class="form-group"
+                                        [ngClass]="(f['email'].invalid &&
+                                        ((f['email'].dirty ||
+                                        f['email'].touched)))
+                                        || (f['email'].hasError('required') &&
+                                        submitted)?'has-error':''">
+                                        <label>Email Address <span
+                                                class="required">*</span></label>
+                                        <input type="email"
+                                            formControlName="email"
                                             id="name"
                                             class="form-control"
-                                            required data-error="Please
-                                            enter your Email"
                                             placeholder="Email">
+                                        <div class="error-msg"
+                                            *ngIf="(f['email'].hasError('required')
+                                            && f['email'].touched) ||
+                                            (f['email'].hasError('required') &&
+                                            submitted)">
+                                            <i aria-hidden="true" class="fa
+                                                fa-exclamation-triangle"></i>
+                                            Please
+                                            enter email address.
+                                        </div>
+                                        <div class="error-msg"
+                                            *ngIf="(f['email'].hasError('pattern')
+                                            && f['email'].touched) ||
+                                            (f['email'].hasError('pattern') &&
+                                            submitted)">
+                                            <i aria-hidden="true" class="fa
+                                                fa-exclamation-triangle"></i>
+                                            Please
+                                            enter a valid email address.
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <div class="form-group">
+                                    <div
+                                        class="form-group"[ngClass]="(f['password'].invalid
+                                        &&
+                                        ((f['password'].dirty ||
+                                        f['password'].touched))) ||
+                                        (f['password'].hasError('required') &&
+                                        submitted)?'has-error':''">
+                                        <label>Set Password <span
+                                                class="required">*</span></label>
                                         <input class="form-control"
                                             type="password"
-                                            name="password"
+                                            formControlName="password"
                                             placeholder="Password">
+                                        <div class="error-msg"
+                                            *ngIf="(f['password'].hasError('required')
+                                            && f['password'].touched) ||
+                                            (f['password'].hasError('required')
+                                            &&
+                                            submitted)">
+                                            <i aria-hidden="true" class="fa
+                                                fa-exclamation-triangle"></i>
+                                            Please
+                                            enter password.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-group"
+                                        [ngClass]="(f['confirmPassword'].invalid
+                                        &&
+                                        ((f['confirmPassword'].dirty ||
+                                        f['confirmPassword'].touched))) ||
+                                        (f['confirmPassword'].hasError('required')
+                                        &&
+                                        submitted)?'has-error':''">
+                                        <label>Confirm Password <span
+                                                class="required">*</span></label>
+                                        <input class="form-control"
+                                            type="password"
+                                            formControlName="confirmPassword"
+                                            placeholder="Confirm Password">
+                                        <div class="error-msg"
+                                            *ngIf="(f['confirmPassword'].hasError('required')
+                                            && f['confirmPassword'].touched) ||
+                                            (f['confirmPassword'].hasError('required')
+                                            &&
+                                            submitted)">
+                                            <i aria-hidden="true" class="fa
+                                                fa-exclamation-triangle"></i>
+                                            Please
+                                            confirm password.
+                                        </div>
+                                        <div class="error-msg"
+                                            *ngIf="f['confirmPassword'].hasError('confirmedValidator')
+                                            ||
+                                            f['password'].hasError('confirmedValidator')">
+                                            Passwords do not match
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-md-12
                                     text-center">
+                                    <div class="error-msg"
+                                        *ngIf="serverErrMsg">
+                                        {{serverErrMsg}}
+                                    </div>
                                     <button type="submit"
                                         class="default-btn">
-                                        Register Now
+                                        {{ !isLoading ? "Register Now":
+                                        "Registering..."}}
                                     </button>
                                 </div>
                                 <div class="col-12 text-center">
                                     <p class="account-desc">
                                         Already have an account?
-                                        <a routerLink="/user/login" (click)="scrollTop()">Log In</a>
+                                        <a routerLink="/user/login"
+                                            (click)="scrollTop()">Log In</a>
                                     </p>
                                 </div>
                             </div>
@@ -71,3 +173,5 @@
         </div>
     </div>
 </div>
+
+<app-spinner *ngIf="isLoading"></app-spinner>
