worked on mobile-nav

--- a/client/src/app/modules/core/footer/footer.component.html
+++ b/client/src/app/modules/core/footer/footer.component.html
@@ -48,7 +48,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/diet-plans" >
+                                <a routerLink="/diet-plans" (click)="scrollTop()">
                                     Diet Plans
                                 </a>
                             </li>
