--- a/client/src/app/modules/account-and-settings/components/orders/orders.component.html
+++ b/client/src/app/modules/account-and-settings/components/orders/orders.component.html
@@ -1,4 +1,4 @@
-<div class="inner-banner inner-bg13" [@fade]="'active'">
+<div class="inner-banner inner-bg13">
     <div class="container">
 
         <div class="inner-title text-center">
@@ -35,14 +35,14 @@
     </div>
 </div> -->
 
-<section class="cart-wraps-area pt-100 pb-70" [@fade]="'active'">
+<section class="cart-wraps-area pt-100 pb-70">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <form>
                     <div class="cart-wraps">
                         <div class="cart-table table-responsive">
-                            <h3  *ngIf="orders.length<1">You havn't placed any order yet! <a routerLink="/diet-plans" style="margin-left: 4px;">  Place an order</a></h3>
+                            <h3  *ngIf="orders.length<1">You havn't placed any order yet! <a routerLink="/diet-plans" style="margin-left: 4px;" (click)="scrollTop()">  Place an order</a></h3>
                             <table class="table table-bordered" *ngIf="orders.length>=1">
                                 <thead>
                                     <tr>
