--- a/client/src/app/modules/account-and-settings/components/profile/profile.component.html
+++ b/client/src/app/modules/account-and-settings/components/profile/profile.component.html
@@ -150,7 +150,7 @@
                                     (f['height'].hasError('required')
                                     &&
                                     submitted)?'has-error':''">
-                                    <label>Height <span class="required">*</span></label>
+                                    <label>Height(in feet inches) <span class="required">*</span></label>
                                     <input formControlName="height" type="text"
                                         class="form-control">
                                     <div class="error-msg"
@@ -172,7 +172,7 @@
                                     (f['weight'].hasError('required')
                                     &&
                                     submitted)?'has-error':''">
-                                    <label>Weight <span class="required">*</span></label>
+                                    <label>Weight(in kg(s)) <span class="required">*</span></label>
                                     <input formControlName="weight" type="text"
                                         class="form-control">
                                     <div class="error-msg"
