updated privacy route

--- a/client/src/app/modules/core/footer/footer.component.html
+++ b/client/src/app/modules/core/footer/footer.component.html
@@ -53,7 +53,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a routerLink="/privacy-policy" (click)="scrollTop()">
+                                <a routerLink="/privacy-and-refund-policies" (click)="scrollTop()">
                                     Privacy Policy
                                 </a>
                             </li>
