--- a/client/src/app/modules/core/header/header.component.html
+++ b/client/src/app/modules/core/header/header.component.html
@@ -99,7 +99,7 @@
                                     </app-accordion>
 
                                     <li class="nav-item">
-                                        <a routerLink="/privacy-policy"
+                                        <a routerLink="/privacy-and-refund-policies"
                                         (click)="scrollTop()" routerLinkActive="active" class="nav-link">
                                             Privacy Policy
                                             <i class="bx bx-chevron-down"></i>
@@ -218,7 +218,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a routerLink="/privacy-policy"
+                                <a routerLink="/privacy-and-refund-policies"
                                     (click)="scrollTop()"
                                     routerLinkActive="active"
                                     class="nav-link">
